--- a/src/templates/page.module.scss
+++ b/src/templates/page.module.scss
@@ -1,4 +1,16 @@
 .toc {
-    border: solid;
-    margin: 1em;
+  @apply my-8 py-4;
+  @apply border-solid border border-gray-400;
+  @apply bg-gray-100;
+  @apply text-sm;
+
+  > ul::before {
+    content: 'Table Of Contents';
+    @apply block;
+    @apply mb-4;
+    @apply text-gray-600;
+  }
+  li p {
+    @apply m-1;
+  }
 }
